// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GaugeBinding should be invalid for bad variable 1`] = `
Object {
  "formula": "yup:string.formula",
}
`;

exports[`GaugeBinding should be invalid for extra fields 1`] = `
Object {
  "": Object {
    "key": "yup:object.noUnknown",
    "options": Object {
      "path": "this",
    },
  },
}
`;

exports[`GaugeBinding should be invalid for incorrect formula 1`] = `
Object {
  "formula": "yup:string.formula",
}
`;

exports[`GaugeBinding should be invalid for too many variables 1`] = `
Object {
  "formula": "yup:string.formula",
}
`;

exports[`SectionAdminSettings should be invalid for demo undefined 1`] = `
Object {
  "demo": "yup:mixed.defined",
}
`;

exports[`SectionAdminSettings should be invalid for extra fields 1`] = `
Object {
  "": Object {
    "key": "yup:object.noUnknown",
    "options": Object {
      "path": "this",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad alt name 1`] = `
Object {
  "altNames": Array [
    ,
    "yup:mixed.required",
  ],
}
`;

exports[`SectionInput should be invalid for bad difficulty (fraction) 1`] = `
Object {
  "difficulty": Object {
    "key": "yup:mixed.oneOf",
    "options": Object {
      "values": "0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad difficulty (max) 1`] = `
Object {
  "difficulty": Object {
    "key": "yup:mixed.oneOf",
    "options": Object {
      "values": "0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad difficulty (min) 1`] = `
Object {
  "difficulty": Object {
    "key": "yup:mixed.oneOf",
    "options": Object {
      "values": "0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad distance 1`] = `
Object {
  "distance": Object {
    "key": "yup:number.positive",
    "options": Object {
      "path": "distance",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad drop 1`] = `
Object {
  "drop": Object {
    "key": "yup:number.positive",
    "options": Object {
      "path": "drop",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad duration 1`] = `
Object {
  "duration": Object {
    "key": "yup:mixed.oneOf",
    "options": Object {
      "values": ", 10, 20, 30, 40, 50",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad extra difficulty 1`] = `
Object {
  "difficultyXtra": Object {
    "key": "yup:string.max",
    "options": Object {
      "max": 32,
      "path": "difficultyXtra",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad gauge id 1`] = `
Object {
  "gauge": Object {
    "id": Object {
      "key": "yup:string.uuid",
      "options": Object {
        "path": "gauge.id",
      },
    },
  },
}
`;

exports[`SectionInput should be invalid for bad id 1`] = `
Object {
  "id": Object {
    "key": "yup:string.uuid",
    "options": Object {
      "path": "id",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad name 1`] = `
Object {
  "name": "yup:string.nonEmpty",
}
`;

exports[`SectionInput should be invalid for bad pois 1`] = `
Object {
  "pois": Array [
    ,
    Object {
      "id": Object {
        "key": "yup:string.uuid",
        "options": Object {
          "path": "pois[1].id",
        },
      },
    },
  ],
}
`;

exports[`SectionInput should be invalid for bad rating (fraction) 1`] = `
Object {
  "rating": Object {
    "key": "yup:mixed.oneOf",
    "options": Object {
      "values": ", 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad rating (max) 1`] = `
Object {
  "rating": Object {
    "key": "yup:mixed.oneOf",
    "options": Object {
      "values": ", 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad rating (min) 1`] = `
Object {
  "rating": Object {
    "key": "yup:mixed.oneOf",
    "options": Object {
      "values": ", 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad river id 1`] = `
Object {
  "river": "yup:mixed.newNode",
}
`;

exports[`SectionInput should be invalid for bad season numeric (bad half-month) 1`] = `
Object {
  "seasonNumeric": Array [
    ,
    Object {
      "key": "yup:number.max",
      "options": Object {
        "max": 23,
        "path": "seasonNumeric[1]",
      },
    },
    Object {
      "key": "yup:number.min",
      "options": Object {
        "min": 0,
        "path": "seasonNumeric[2]",
      },
    },
  ],
}
`;

exports[`SectionInput should be invalid for bad season numeric (too many items) 1`] = `
Object {
  "seasonNumeric": Object {
    "key": "yup:array.max",
    "options": Object {
      "max": 24,
      "path": "seasonNumeric",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad shape (bad point) 1`] = `
Object {
  "shape": Array [
    ,
    Array [
      "yup:number.longitude",
    ],
  ],
}
`;

exports[`SectionInput should be invalid for bad shape (not enough points) 1`] = `
Object {
  "shape": Object {
    "key": "yup:array.min",
    "options": Object {
      "min": 2,
      "path": "shape",
    },
  },
}
`;

exports[`SectionInput should be invalid for bad tags 1`] = `
Object {
  "tags": Array [
    Object {
      "key": "yup:mixed.notType",
      "options": Object {
        "type": "object",
      },
    },
    Object {
      "key": "yup:mixed.notType",
      "options": Object {
        "type": "object",
      },
    },
    Object {
      "key": "yup:mixed.notType",
      "options": Object {
        "type": "object",
      },
    },
  ],
}
`;

exports[`SectionInput should be invalid for extra fields 1`] = `
Object {
  "": Object {
    "key": "yup:object.noUnknown",
    "options": Object {
      "path": "this",
    },
  },
}
`;

exports[`SectionInput should be invalid for incorrect media 1`] = `
Object {
  "media": Array [
    Object {
      "id": Object {
        "key": "yup:string.uuid",
        "options": Object {
          "path": "media[0].id",
        },
      },
    },
  ],
}
`;

exports[`SectionInput should be invalid for new river without name 1`] = `
Object {
  "river": "yup:mixed.newNode",
}
`;

exports[`SectionInput should be invalid for null media 1`] = `
Object {
  "media": Object {
    "key": "yup:mixed.notType",
    "options": Object {
      "type": "array",
    },
  },
}
`;
